--- a/index.html
+++ b/index.html
@@ -540,7 +540,111 @@
             </li>
           </ul>
         </div>
+        <form class="footer-subscribe-form">
+          <div class="footer-input-container">
+            <p class="footer-subscribe-input-text">Subscribe</p>
+            <input
+              class="footer-subscribe-email-input"
+              type="email"
+              placeholder="E-mail"
+            />
+          </div>
+          <button class="footer-subscribe-email-button" type="submit">
+            <p class="footer-subscribe-button-text">Subscribe</p>
+            <svg class="footer-subscribe-button-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-frame-3"></use>
+            </svg>
+          </button>
+        </form>
       </div>
     </footer>
+
+    <div class="backdrop">
+      <div class="modal">
+        <button class="modal-close-button">
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+
+        <form class="modal-form">
+          <div class="modal-field">
+            <label class="modal-label" for="user-name">Name</label>
+            <div class="modal-input-wrap">
+              <input
+                class="modal-input"
+                type="text"
+                name="user-name"
+                id="user-name"
+              />
+              <svg class="modal-input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-field">
+            <label class="modal-label" for="user-phone">Phone</label>
+            <div class="modal-input-wrap">
+              <input
+                class="modal-input"
+                type="text"
+                name="user-phone"
+                id="user-phone"
+              />
+              <svg class="modal-input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label class="modal-label" for="user-email">Email</label>
+            <div class="modal-input-wrap">
+              <input
+                class="modal-input"
+                type="text"
+                name="user-email"
+                id="user-email"
+              />
+              <svg class="modal-input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-field">
+            <label class="modal-label" for="user-comment">Comment</label>
+            <textarea
+              class="modal-input-textarea"
+              name="user-comment"
+              placeholder="Text input"
+              id="user-comment"
+            ></textarea>
+          </div>
+
+          <div class="modal-field">
+            <input
+              class="check-input visually-hidden"
+              type="checkbox"
+              name="modal-check"
+              id="modal-check"
+            />
+            <label class="check-text" for="modal-check">
+              <span>
+                <svg class="modal-check-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-Vector"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the &nbsp;
+              <a href="">Privacy Policy</a>
+            </label>
+          </div>
+          <div class="modal-button-wrap">
+            <button class="form-send-button" type="submit">Send</button>
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
