--- a/index.html
+++ b/index.html
@@ -540,28 +540,31 @@
             </li>
           </ul>
         </div>
-        <form class="footer-subscribe-form">
-          <div class="footer-input-container">
-            <p class="footer-subscribe-input-text">Subscribe</p>
+        <div class="footer-subscribe-container">
+          <p class="footer-subscribe-text">Subscribe</p>
+          <form class="footer-subscribe-form">
+            <label for="subscriber-email"></label>
             <input
-              class="footer-subscribe-email-input"
+              class="footer-subscribe-input"
+              name="subscriber-email"
               type="email"
+              id="subscriber-email"
               placeholder="E-mail"
             />
-          </div>
-          <button class="footer-subscribe-email-button" type="submit">
-            <p class="footer-subscribe-button-text">Subscribe</p>
-            <svg class="footer-subscribe-button-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-frame-3"></use>
-            </svg>
-          </button>
-        </form>
+            <button class="footer-subscribe-button" type="submit">
+              Subscribe
+              <svg class="footer-subscribe-button-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-frame-3"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
 
     <div class="backdrop">
       <div class="modal">
-        <button class="modal-close-button">
+        <button class="modal-close-button" type="button">
           <svg class="modal-close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
@@ -578,7 +581,7 @@
                 name="user-name"
                 id="user-name"
               />
-              <svg class="modal-input-icon" width="18" height="18">
+              <svg class="modal-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
@@ -613,7 +616,7 @@
             </div>
           </div>
 
-          <div class="modal-field">
+          <div class="modal-text-field">
             <label class="modal-label" for="user-comment">Comment</label>
             <textarea
               class="modal-input-textarea"
@@ -623,26 +626,25 @@
             ></textarea>
           </div>
 
-          <div class="modal-field">
+          <div class="modal-check-field">
             <input
               class="check-input visually-hidden"
               type="checkbox"
-              name="modal-check"
-              id="modal-check"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
             />
-            <label class="check-text" for="modal-check">
-              <span>
+            <label class="check-text" for="user-privacy">
+              <span class="check-wrap">
                 <svg class="modal-check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-Vector"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the &nbsp;
-              <a href="">Privacy Policy</a>
+              <a class="privacy-policy-link" href="">Privacy Policy</a>
             </label>
           </div>
-          <div class="modal-button-wrap">
-            <button class="form-send-button" type="submit">Send</button>
-          </div>
+          <button class="form-send-button" type="submit">Send</button>
         </form>
       </div>
     </div>
