fixed after 2nd autocheck

--- a/index.html
+++ b/index.html
@@ -543,14 +543,14 @@
         <div class="footer-subscribe-container">
           <p class="footer-subscribe-text">Subscribe</p>
           <form class="footer-subscribe-form">
-            <label for="subscriber-email"></label>
-            <input
-              class="footer-subscribe-input"
-              name="subscriber-email"
-              type="email"
-              id="subscriber-email"
-              placeholder="E-mail"
-            />
+            <label class="footer-subskribe-label" for="subscriber-email">
+              <input
+                class="footer-subscribe-input"
+                name="subscriber-email"
+                type="email"
+                id="subscriber-email"
+                placeholder="E-mail"
+            /></label>
             <button class="footer-subscribe-button" type="submit">
               Subscribe
               <svg class="footer-subscribe-button-icon" width="24" height="24">
