--- a/index.html
+++ b/index.html
@@ -640,8 +640,11 @@
                   <use href="./images/icons.svg#icon-Vector"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the &nbsp;
-              <a class="privacy-policy-link" href="">Privacy Policy</a>
+              I accept the terms and conditions of the &nbsp;<a
+                class="privacy-policy-link"
+                href=""
+                >Privacy Policy</a
+              >
             </label>
           </div>
           <button class="form-send-button" type="submit">Send</button>
